Hiding redhen on mobile. Z-Index issues

--- a/sass/foundation-overrides.scss
+++ b/sass/foundation-overrides.scss
@@ -413,7 +413,7 @@ header {
   }
 
   #redhen-id {
-    display: block;
+    display: none;
     bottom: -4em;
     left: 1em;
   }
